# aura

./: Cargo.toml  architecture-design.md  icon-design.md  prompt.md  structure.txt
.github/workflows/: package.yml
.memory/: decisions.md  inventory.md  sessions.md  state.md
.omx/: metrics.json  notepad.md  project-memory.json
.omx/cache/: codebase-map.json
.omx/logs/: notify-fallback-2026-05-11.jsonl  notify-fallback-2026-05-13.jsonl  notify-fallback-2026-05-14.jsonl  notify-fallback-2026-05-15.jsonl  omx-2026-05-11.jsonl  omx-2026-05-12.jsonl  omx-2026-05-13.jsonl  omx-2026-05-14.jsonl  session-history.jsonl  tmux-hook-2026-05-13.jsonl  tmux-hook-2026-05-14.jsonl  tmux-hook-2026-05-15.jsonl  turns-2026-05-11.jsonl  turns-2026-05-12.jsonl  turns-2026-05-13.jsonl  turns-2026-05-14.jsonl  turns-2026-05-15.jsonl
.omx/state/: current-task-baseline.json  native-stop-state.json  notify-fallback-authority-owner.json  notify-fallback-state.json  notify-fallback.pid  session.json  subagent-tracking.json  tmux-hook-state.json  update-check.json
.prompt/: P0-foundation.md  P1-basic-elements.md  P11-tray.md  P12-packaging.md  P13-component-expansion.md  P5-advanced.md  P6-builtin-id.md  P7-demo-self-contained.md  P8-engineering.md  P9-deferred-advanced.md
apps/aura-docs/: Cargo.toml
apps/aura-gallery/: Cargo.toml
crates/aura-icons/: Cargo.toml
crates/aura-tray/: Cargo.toml
crates/aura-tray/src/: lib.rs
docs/: packaging-installer-technical-plan.md
packaging/: Packager.docs.toml  Packager.gallery.toml  README.md
scripts/: sync-lucide.sh
xtask/: Cargo.toml
(+533 files in other folders)
