[package]
name = "aura-tray"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
image = "0.25"
thiserror = "2"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gtk = "0.18"
tray-icon = { version = "0.24", default-features = false, features = ["gtk"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = { version = "0.24", default-features = false }
